src/main/java/com/example/coursemanagement/services/exceptions/error/DuplicateResourceException.java
package com.example.coursemanagement.services.exceptions.error;

public class DuplicateResourceException extends RuntimeException{
    public DuplicateResourceException(String message) {
        super(message);
    }
}
